Reorganiza camadas de acordo com padrão de projeto orientado a domínio.

--- a/poc.risco.project/poc.Risco.Api/poc.Risco.Api.csproj
+++ b/poc.risco.project/poc.Risco.Api/poc.Risco.Api.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0-preview2-final" />    
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\poc.Core\poc.Core.csproj" />
+    <ProjectReference Include="..\poc.Infra\poc.Infra.csproj" />
   </ItemGroup>
 
 </Project>
