Implementa chamada via RestSharp para GimConnector do método SignInUser.

--- a/poc.risco.project/poc.Api/poc.Api.csproj
+++ b/poc.risco.project/poc.Api/poc.Api.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\poc.Core\poc.Core.csproj" />
+    <ProjectReference Include="..\poc.Infra\poc.Infra.csproj" />
   </ItemGroup>
 
 </Project>
