--- a/poc.risco.project/poc.Core/poc.Core.csproj
+++ b/poc.risco.project/poc.Core/poc.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dlp.Framework.dll" Version="1.0.7" />
+    <PackageReference Include="RestSharp" Version="106.2.2" />
+  </ItemGroup>
+
 </Project>
