--- a/poc.risco.project/poc.Core/poc.Core.csproj
+++ b/poc.risco.project/poc.Core/poc.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dlp.Framework.dll" Version="1.0.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="RestSharp" Version="106.2.2" />
   </ItemGroup>
 
