Implementa injeção de dependência para o serviço.

--- a/poc.risco.project/poc.Core/poc.Core.csproj
+++ b/poc.risco.project/poc.Core/poc.Core.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="RestSharp" Version="106.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Options">
+      <HintPath>..\..\..\..\Users\bmiranda\.nuget\packages\microsoft.extensions.options\2.0.2\lib\netstandard2.0\Microsoft.Extensions.Options.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
