--- a/poc.risco.project/poc.Api/appsettings.json
+++ b/poc.risco.project/poc.Api/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+
+  "GimSettings": {
+    "ProductionDomain": "https://gim.stone.com.br",
+    "AuthenticateEndpoint": "/api/authorization/authenticate"
+  } 
 }
