Adiciona tempo de expiração do token e chave da aplicação nas configurações do GIM.

--- a/poc.risco.project/poc.Api/appsettings.json
+++ b/poc.risco.project/poc.Api/appsettings.json
@@ -5,6 +5,8 @@
 
   "GimSettings": {
     "ProductionDomain": "https://gim.stone.com.br",
-    "AuthenticateEndpoint": "/api/authorization/authenticate"
+    "AuthenticateEndpoint": "/api/authorization/authenticate",
+    "ApplicationKey": "e632c04b-a1d7-4faa-bf34-1764bec84607",
+    "TokenExpirationInMinutes" : "720" 
   } 
 }
